@@ -68,7 +68,7 @@ Maximum age (in second) of the cached version before redownloading a new version
 .Xr migrate-offpunk-cache 1 ,
 .Xr offpunk 1 ,
 .Xr opnk 1 ,
-.Lk https://sr.ht/~lioploum/offpunk/
+.Lk https://offpunk.net/
 .
 .Sh AUTHORS
 .An Lionel Dricot (Ploum) Aq Mt offpunk2 at ploum.eu
