@@ -81,7 +81,7 @@ display available features and dependancies then quit
 .Xr migrate-offpunk-cache 1 ,
 .Xr netcache 1 ,
 .Xr opnk 1 ,
-.Lk https://sr.ht/~lioploum/offpunk/
+.Lk https://offpunk.net/
 .
 .Sh HISTORY
 .Nm
